--- a/config/i3/config
+++ b/config/i3/config
@@ -132,7 +132,9 @@ bindsym $super+3 workspace $ws3
 bindsym $super+4 workspace $ws4
 # gitkraken or mysql
 bindsym $super+5 workspace $ws5
+# Mailspring
 bindsym $super+6 workspace $ws6
+# Spotify
 bindsym $super+7 workspace $ws7
 bindsym $super+8 workspace $ws8
 bindsym $super+9 workspace $ws9
@@ -156,18 +158,17 @@ assign [class="Google-chrome"] $ws1
 exec --no-startup-id google-chrome-stable
 assign [class="code-oss"] $ws2
 exec --no-startup-id code
-assign [class="gitkraken"] $ws5
-exec --no-startup-id gitkraken
-for_window [class="gitkraken"] move to workspace $ws5
+assign [class="GitKraken"] $ws5
+for_window [class="GitKraken"] move to workspace $ws5
 assign [class="Franz"] $ws4
 exec --no-startup-id franz
 assign [class="discord"] $ws4
 exec --no-startup-id discord-canary
 for_window [class="discord"] move to workspace $ws4
-assign [class="Spotify"] $ws6
-exec --no-startup-id spotify --force-device-scale-factor=1.5
-# Because assign [class="Spotify"] $ws6 doesn't work.
-for_window [class="Spotify"] move to workspace $ws6
+assign [class="Spotify"] $ws7
+for_window [class="Spotify"] move to workspace $ws7
+assign [class="Mailspring"] $ws6
+exec --no-startup-id mailspring
 
 # Main space
 # exec --no-startup-id peaclock
@@ -206,9 +207,6 @@ mode "resize" {
 
 bindsym $super+r mode "resize"
 
-# Screen layout
-exec_always --no-startup-id $HOME/.screenlayout/work.sh
-
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 #bar {
@@ -240,10 +238,10 @@ bindsym XF86AudioNext exec playerctl next
 bindsym XF86AudioPrev exec playerctl previous
 
 # Wallpaper
-exec_always --no-startup-id feh --bg-scale ~/.wallpaper.jpg
+exec_always --no-startup-id feh --bg-scale $HOME/.wallpaper.png
 
 # Transparency
-exec_always --no-startup-id compton --config ~/.config/compton/compton.conf
+exec_always --no-startup-id compton --config $HOME/.config/compton/compton.conf
 
 # Flash Focus
 exec_always --no-startup-id flashfocus
