--- a/config/compton/compton.conf
+++ b/config/compton/compton.conf
@@ -23,15 +23,15 @@ shadow-exclude = [ "class_g = 'Cairo-clock'" ,
 ];
 
 ## fading
-fading = true;
-fade-delta = 0.25;
-fade-in-step = 0.02;
-fade-out-step = 0.02;
-fade-exclude = [
-];
+fading = false;
+#fade-delta = 0.25;
+#fade-in-step = 0.02;
+#fade-out-step = 0.02;
+#fade-exclude = [
+#];
 
 ## other
-backend = "xrender";
+backend = "glx";
 mark-wmwin-focused = true;
 mark-ovredir-focused = true;
 detect-rounded-corners = true;
@@ -53,5 +53,5 @@ glx-copy-from-front = false;
 glx-swap-method = "undefined";
 wintypes:
 {
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; };
+  tooltip = { fade = false; shadow = true; opacity = 0.75; focus = true; };
 };
