format on save code

--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -4,5 +4,6 @@
     "workbench.activityBar.visible": true,
     "terminal.integrated.fontFamily": "RobotoMono Nerd Font",
     "workbench.iconTheme": "eq-material-theme-icons-darker",
-    "workbench.colorTheme": "Material Theme Darker"
+    "workbench.colorTheme": "Material Theme Darker",
+    "editor.formatOnSave": true
 }
