--- a/config/code/settings.json
+++ b/config/code/settings.json
@@ -5,5 +5,6 @@
     "terminal.integrated.fontFamily": "RobotoMono Nerd Font",
     "workbench.iconTheme": "eq-material-theme-icons-darker",
     "workbench.colorTheme": "Material Theme Darker",
-    "editor.formatOnSave": true
+    "editor.formatOnSave": true,
+    "typescript.updateImportsOnFileMove.enabled": "always"
 }
