--- a/config/polybar/config
+++ b/config/polybar/config
@@ -45,7 +45,7 @@ module-margin-right = 2
 
 modules-left = i3
 modules-center = player-mpris-tail
-modules-right = pulseaudio memory cpu network date powermenu
+modules-right = pulseaudio memory cpu battery network date powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -106,6 +106,8 @@ label-urgent-padding = 4
 ; Separator in between workspaces
 ; label-separator = |
 
+battery = BAT0
+adapter = ADP1
 
 [module/player-mpris-tail]
 type = custom/script
@@ -202,23 +204,44 @@ bar-volume-empty-font = 2
 bar-volume-empty-foreground = ${colors.foreground-alt}
 
 [module/powermenu]
-type = custom/menu
+type = custom/script
 
-expand-right = true
+;expand-right = true
 
-format-spacing = 1
+;format-spacing = 1
 
-label-open =   power
-label-open-foreground = ${colors.secondary}
-label-close =   cancel
-label-close-foreground = ${colors.secondary}
-label-separator = |
-label-separator-foreground = ${colors.foreground-alt}
+exec = echo ""
+click-left = ~/.config/rofi/bin/powermenu
 
-menu-0-0 = reboot
-menu-0-0-exec = sudo reboot
-menu-0-1 = power off
-menu-0-1-exec = sudo poweroff
+;label-close =   cancel
+;label-close-foreground = ${colors.secondary}
+;label-separator = |
+;label-separator-foreground = ${colors.foreground-alt}
+
+;menu-0-0 = reboot
+;menu-0-0-exec = sudo reboot
+;menu-0-1 = power off
+;menu-0-1-exec = sudo poweroff
+
+
+[module/battery]
+type = internal/battery
+
+;battery = BAT0
+;adapter = ADP1
+
+format-full-prefix = " "
+ramp-capacity-0 = " "
+ramp-capacity-1 = " "
+ramp-capacity-2 = " "
+animation-charging-0 = " "
+animation-charging-1 = " "
+animation-charging-2 = " "
+
+;format-prefix-foreground = ${colors.foreground-alt}
+format-charging-underline = #E0D953
+format-full-underline = #E0D953
+format-discharging-underline = #E0D953
 
 [settings]
 screenchange-reload = true
