--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -55,9 +55,9 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = "Cascadia Code:pixelsize=16;2"
-font-1 = "Font Awesome 5 Free:style=Regular:pixelsize=16;3"
-font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=16;3"
-font-3 = "Font Awesome 5 Brands:pixelsize=16;3"
+font-1 = "Font Awesome 5 Free:style=Regular:pixelsize=16;2"
+font-2 = "Font Awesome 5 Free:style=Solid:pixelsize=16;2"
+font-3 = "Font Awesome 5 Brands:pixelsize=16;2"
 
 modules-left = bspwm
 modules-center = spotify spotify-prev spotify-play-pause spotify-next
@@ -95,23 +95,32 @@ monitor = DP1
 [module/bspwm]
 type = internal/bspwm
 
-label-focused = %name%
+ws-icon-0 = Chrome;
+ws-icon-1 = Code;
+ws-icon-2 = Terminal;
+ws-icon-3 = Chat;
+ws-icon-4 = Git;
+ws-icon-5 = Mail;
+ws-icon-6 = Spotify;
+ws-icon-default = 
+
+label-focused = %icon% %name%
 ;label-focused-background = ${colors.background-alt}
 label-focused-foreground = ${colors.primary}
 label-focused-underline= ${colors.primary}
-label-focused-padding = 1
+label-focused-padding = 2
 
-label-occupied = %name%
-label-occupied-foreground = ${colors.primary}
-label-occupied-padding = 1
+label-occupied = %icon%
+label-occupied-foreground = ${colors.foreground}
+label-occupied-padding = 2
 
-label-urgent = %name%!
+label-urgent = %icon%!
 label-urgent-background = ${colors.primary}
-label-urgent-padding = 1
+label-urgent-padding = 2
 
-label-empty = %name%
+label-empty = 
 label-empty-foreground = ${colors.foreground}
-label-empty-padding = 1
+label-empty-padding = 2
 
 ; Separator in between workspaces
 ; label-separator = |
