--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -27,8 +27,8 @@ primary = ${xrdb:color9}
 secondary = #0000ff
 alert = #ffff00
 
-[bar/eDP-1-1]
-monitor = eDP-1-1
+[bar/default]
+monitor = ${env:BAR_TARGET:}
 width = 100%
 height = 52
 ;offset-x = 1%
@@ -82,23 +82,6 @@ cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-[bar/HDMI2]
-inherit = bar/eDP-1-1
-monitor = HDMI2
-
-[bar/HDMI1]
-inherit = bar/eDP-1-1
-monitor = HDMI1
-
-[bar/DP-1-1]
-inherit = bar/eDP-1-1
-monitor = DP-1-1
-
-[bar/DP-1-2]
-inherit = bar/eDP-1-1
-monitor = DP-1-2
-
 
 [module/bspwm]
 type = internal/bspwm
