--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -208,6 +208,7 @@ opacity-rule = [
 # blur-size = 12
 #
 # blur-deviation = false
+blur = false;
 
 # Blur background of semi-transparent / ARGB windows. 
 # Bad in performance, with driver-dependent behavior. 
@@ -234,33 +235,34 @@ opacity-rule = [
 # blur-kern = ''
 # blur-kern = "3x3box";
 
-blur: {
-  # requires: https://github.com/ibhagwan/picom
-  method = "kawase";
-  #method = "kernel";
-  strength = 7;
-  # deviation = 1.0;
-  # kernel = "11x11gaussian";
-  background = false;
-  background-frame = false;
-  background-fixed = false;
-  kern = "3x3box";
-}
+# blur: 
+# {
+#   # requires: https://github.com/ibhagwan/picom
+#   #method = "kawase";
+#   #method = "kernel";
+#   strength = 7;
+#   # deviation = 1.0;
+#   # kernel = "11x11gaussian";
+#   background = false;
+#   background-frame = false;
+#   background-fixed = false;
+#   kern = "3x3box";
+# }
 
 # Exclude conditions for background blur.
-blur-background-exclude = [
-  #"window_type = 'dock'",
-  #"window_type = 'desktop'",
-  #"class_g = 'URxvt'",
-  #
-  # prevents picom from blurring the background
-  # when taking selection screenshot with `main`
-  # https://github.com/naelstrof/maim/issues/130
-  "class_g = 'slop'",
-  "_GTK_FRAME_EXTENTS@:c",
-  "class_g     = 'Polybar'",
-  "class_g     = 'Rofi'"
-];
+# blur-background-exclude = [
+#   #"window_type = 'dock'",
+#   #"window_type = 'desktop'",
+#   #"class_g = 'URxvt'",
+#   #
+#   # prevents picom from blurring the background
+#   # when taking selection screenshot with `main`
+#   # https://github.com/naelstrof/maim/issues/130
+#   "class_g = 'slop'",
+#   "_GTK_FRAME_EXTENTS@:c",
+#   "class_g     = 'Polybar'",
+#   "class_g     = 'Rofi'"
+# ];
 
 
 #################################
@@ -275,12 +277,12 @@ blur-background-exclude = [
 #
 #experimental-backends = true;
 #backend = "glx";
-backend = "xrender";
+backend = "glx";
 
 
 # Enable/disable VSync.
 # vsync = false
-vsync = false
+vsync = true
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -311,7 +313,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+refresh-rate = 60
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
