color fixes & hide empty workspaces

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -315,13 +315,13 @@ label-urgent-background = ${color.bg}
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-empty = %icon%
-label-empty-foreground = ${color.fg}
+label-empty = 
+#label-empty-foreground = ${color.fg}
 
 label-active-padding = 4
 label-urgent-padding = 4
 label-occupied-padding = 4
-label-empty-padding = 4
+#label-empty-padding = 0
 
 ; Available tags:
 ;   <label-monitor>
