Update polybar look

--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -101,6 +101,8 @@ card = intel_backlight
 ;   <ramp>
 ;   <bar>
 format = <ramp> <label>
+format-background = ${color.bg}
+format-padding = 3
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -155,6 +157,8 @@ time-format = %H:%M
 ;   <ramp-capacity>
 ;   <animation-charging>
 format-charging = <animation-charging> <label-charging>
+format-charging-background = ${color.bg}
+format-charging-padding = 3
 ;;format-charging-prefix = 
 ; Available tags:
 ;   <label-discharging> (default)
@@ -162,12 +166,16 @@ format-charging = <animation-charging> <label-charging>
 ;   <ramp-capacity>
 ;   <animation-discharging>
 format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-background = ${color.bg}
+format-discharging-padding = 3
 
 ; Available tags:
 ;   <label-full> (default)
 ;   <bar-capacity>
 ;   <ramp-capacity>
 ;format-full = <ramp-capacity> <label-full>
+format-full-background = ${color.bg}
+format-full-padding = 3
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -299,6 +307,7 @@ label-active-overline = ${color.ac}
 ; Default: %icon%  %name%
 label-occupied = %icon%
 label-occupied-underline = ${color.fg}
+label-occupied-background = ${color.bg}
 
 ; Available tokens:
 ;   %name%
@@ -421,6 +430,8 @@ interval = 0.5
 ;;format = <label> <ramp-coreload>
 format = <label>
 format-prefix = 
+format-background = ${color.bg}
+format-padding = 3
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
@@ -456,12 +467,12 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time =  %H:%M
+time = %H:%M  %Y-%m-%d%
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
 ;;date-alt = %A, %d %B %Y
-time-alt =  %Y-%m-%d%
+time-alt = %Y-%m-%d%
 
 ; Available tags:
 ;   <label> (default)
@@ -472,6 +483,8 @@ format = <label>
 ;   %time%
 ; Default: %date%
 label = %time%
+format-background = ${color.bg}
+format-padding = 3
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -687,6 +700,8 @@ interval = 3
 ;   <ramp-swap-free>
 format = <label>
 format-prefix = 
+format-background = ${color.bg}
+format-padding = 3
 ; Available tokens:
 ;   %percentage_used% (default)
 ;   %percentage_free%
@@ -873,6 +888,12 @@ unknown-as-up = true
 format-connected = %{A1:$HOME/.config/polybar/scripts/nmcli-rofi:}<ramp-signal>%{A}
 format-disconnected = %{A1:$HOME/.config/polybar/scripts/nmcli-rofi:}<label-disconnected>%{A}
 
+
+format-connected-background = ${color.bg}
+format-disconnected-background = ${color.bg}
+
+format-connected-padding = 3
+format-disconnected-padding = 3
 ; Available tags:
 ;   <label-connected> (default)
 ;   <label-packetloss>
@@ -948,6 +969,12 @@ interval = 5
 ;   <ramp-volume>
 ;   <bar-volume>
 format-volume = <ramp-volume> <label-volume>
+
+format-volume-background = ${color.bg}
+format-muted-background = ${color.bg}
+
+format-volume-padding = 3
+format-muted-padding = 3
 
 ; Available tags:
 ;   <label-muted> (default)
