--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -75,7 +75,7 @@ offset-x = 16
 offset-y = 16
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
-background = ${color.bg}
+background = #00ffffff
 
 ; Foreground ARGB color (e.g. #f00, #ff992a, #ddff1023)
 foreground = ${color.fg}
@@ -110,8 +110,8 @@ overline-color = ${color.ac}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-bottom-size = 4
-border-color = ${color.ac}
+#border-bottom-size = 4
+#border-color = ${color.ac}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
@@ -121,8 +121,8 @@ padding = 0
 ; Number of spaces to add before/after each module
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
-module-margin-left = 3
-module-margin-right = 3
+module-margin-left = 0
+module-margin-right = 0
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
@@ -164,8 +164,8 @@ font-5 = "Font Awesome 5 Brands:pixelsize=16;2"
 ;volume brightness battery_bar 
 
 modules-left = bspwm
-modules-center = mpd 
-modules-right = memory cpu pulseaudio battery backlight network date sysmenu
+modules-center =  date
+modules-right = mpd memory cpu pulseaudio battery backlight network sysmenu
 
 ; The separator will be inserted between the output of each module
 separator =
