seperate date and time

--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -164,7 +164,7 @@ font-5 = "Font Awesome 5 Brands:pixelsize=16;2"
 ;volume brightness battery_bar 
 
 modules-left = bspwm
-modules-center =  date
+modules-center =  date time
 modules-right = mpd memory cpu pulseaudio battery backlight network sysmenu
 
 ; The separator will be inserted between the output of each module
