--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -467,12 +467,7 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = %H:%M  %Y-%m-%d%
-
-; if `date-alt` or `time-alt` is defined, clicking
-; the module will toggle between formats
-;;date-alt = %A, %d %B %Y
-time-alt = %Y-%m-%d%
+time =    %Y-%m-%d
 
 ; Available tags:
 ;   <label> (default)
@@ -485,6 +480,35 @@ format = <label>
 label = %time%
 format-background = ${color.bg}
 format-padding = 3
+format-margin-left = 0
+
+;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
+
+[module/time]
+type = internal/date
+
+; Seconds to sleep between updates
+interval = 1.0
+
+; See "http://en.cppreference.com/w/cpp/io/manip/put_time" for details on how to format the date string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+;;date = %Y-%m-%d%
+
+; Optional time format
+time =    %H:%M
+
+; Available tags:
+;   <label> (default)
+format = <label>
+
+; Available tokens:
+;   %date%
+;   %time%
+; Default: %date%
+label = %time%
+format-background = ${color.bg}
+format-padding = 3
+format-margin = 2
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
