--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -1194,7 +1194,7 @@ label-active = %icon%
 label-active-foreground = ${color.ac}
 label-active-background = ${color.bg}
 label-active-overline = ${color.ac}
-module/work
+;module/work
 ; Available tokens:
 ;   %name%
 ;   %icon%
