--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -295,7 +295,7 @@ label-monitor = %name%
 ;   %index%
 ; Default: %icon%  %name%
 label-active = %icon%
-label-active-foreground = ${color.bg}
+label-active-foreground = ${color.white}
 label-active-background = ${color.ac}
 label-active-overline = ${color.ac}
 
