--- a/.config/termite/config
+++ b/.config/termite/config
@@ -53,8 +53,8 @@ color0  = #1E1F1F
 color8  = #444545
 
 # red
-color1  = #BC6266
-color9  = #CB8589
+color1  = #C70039
+color9  = #900C3F
 
 # green
 color2  = #61988E
