--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -12,10 +12,10 @@ rounded-corners-exclude = [
   #"class_g = 'firefox'",
   #"class_g = 'Thunderbird'"
 ];
-round-borders = 0;
-round-borders-exclude = [
+#round-borders = 0;
+#round-borders-exclude = [
   #"class_g = 'TelegramDesktop'",
-];
+#];
 
 #################################
 #             Shadows           #
@@ -27,7 +27,7 @@ round-borders-exclude = [
 # unless explicitly requested using the wintypes option.
 #
 # shadow = false
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -109,7 +109,7 @@ shadow-exclude = [
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true;
+fading = false;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -146,7 +146,7 @@ fade-exclude = [
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1
 inactive-opacity = 0.95;
-
+#inactive-opacity = 1;
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0
 frame-opacity = 1;
@@ -282,11 +282,11 @@ blur-background-frame = false;
 experimental-backends = true;
 #backend = "glx";
 backend = "xrender";
-
+#backend = "xr_glx_hybrid";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = false
+vsync = false;
 dbe = false;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
@@ -338,7 +338,7 @@ use-ewmh-active-win = false
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows. paint-on-overlay may make the flickering less obvious.
 #
-# unredir-if-possible = false
+unredir-if-possible = true
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -487,8 +487,8 @@ log-level = "info";
 #
 wintypes:
 {
-  normal = { fade = true; shadow = true; }
-  tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+  normal = { fade = false; shadow = false; }
+  tooltip = { fade = false; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; focus: false; }
   dnd = { shadow = false;  }
   popup_menu = { opacity = 0.8; }
