--- a/.config/polybar/colorblocks/modules.ini
+++ b/.config/polybar/colorblocks/modules.ini
@@ -399,7 +399,7 @@ interval = 1.0
 ;;date = %Y-%m-%d%
 
 ; Optional time format
-time = " %I:%M %p | %a, %d %b %Y"
+time = " %H:%M | %a, %d %b %Y"
 
 ; if `date-alt` or `time-alt` is defined, clicking
 ; the module will toggle between formats
@@ -1216,14 +1216,14 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = Home;
-icon-1 = Chrome;
-icon-2 = Code;
-icon-3 = Terminal;
-icon-4 = Chat;
-icon-5 = Git;
-icon-6 = Mail;
-icon-7 = Spotify;
+icon-0 = Firefox;
+icon-1 = Code;
+icon-2 = Terminal;
+icon-3 = Chat;
+icon-4 = Git;
+icon-5 = Mail;
+icon-6 = Spotify;
+icon-7 = Home;
 icon-default = 
 
 
