--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-icon-theme-name=cherry-pastel
 gtk-theme-name=cherry
 gtk-cursor-theme-name=capitaine-cursors-light
-gtk-font-name=Noto Sans 10
+gtk-font-name=NotoSans Nerd Font Light 10
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH_HORIZ
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
