chore: moving some stuff around

--- a/.config/hypr/configs/exec.conf
+++ b/.config/hypr/configs/exec.conf
@@ -9,7 +9,7 @@ exec-once = TERM='xterm-256color' waybar
 exec-once = wl-paste -t text --watch clipman store
 
 # wallpaper stuff
-exec-once = swww init && swww img $HOME/Pictures/wallpapers/zerotwo.png  #using swww utility
+exec-once = swww init && swww img $HOME/Pictures/wallpaper.png  #using swww utility
 #exec-once = $scriptsDir/changeWallpaper #using swaybg random wallpaper
 
 # Startup
