--- a/.config/hypr/configs/window_rules.conf
+++ b/.config/hypr/configs/window_rules.conf
@@ -8,6 +8,12 @@ windowrulev2 = float,class:^(telegramdesktop)$,title:^(Media viewer)$
 windowrulev2 = float,class:^(code)$,title:^(Open Folder)$
 windowrulev2 = float,class:^(firefox)$,title:^(Firefox — Sharing Indicator)$
 
+# Firefox floating PiP
+windowrulev2 = float, class:(firefox), title:(Picture-in-Picture)
+windowrulev2 = pin, class:(firefox), title:(Picture-in-Picture)
+windowrulev2 = nofullscreenrequest, class:(firefox), title:(Picture-in-Picture)
+
+
 # Window workspace rules
 windowrulev2 = workspace 1,class:^(firefox)$
 windowrulev2 = workspace 2 silent,title:^(Visual Studio Code)$
